# c-programs

./: CMakeLists.txt  task3.c  task4.c  task4_part2.c  task_2.c
lab1/: CMakeLists.txt  Input.txt  task1.c  task2.c  task3.c
lab2/: task1.c  task3_2.c  task4_part1.c
