cmake_minimum_required(VERSION 3.25)
project(newAss2 C)

set(CMAKE_C_STANDARD 11)
add_executable(task1
        task1.c)

add_executable(task_2
        task_2.c)

add_executable(task3
        task3.c)

add_executable(task3_2
        task3_2.c)


add_executable(task4_part1
        task4_part1.c)

add_executable(task4_part2
        task4_part2.c)